--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-color": "^2.17.3",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "recharts": "^1.8.5"
