--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-image-autofit-frame": "^0.1.0",
     "react-router-dom": "^5.1.2",
     "react-vk": "^5.0.2",
     "recharts": "^1.8.5"
