--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-footer-comp": "^3.0.1",
     "react-router-dom": "^5.1.2",
     "recharts": "^1.8.5"
   }
