--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@material-ui/core": "^4.8.1",
     "axios": "^0.19.0",
     "fetch-jsonp": "^1.1.3",
     "prop-types": "^15.7.2",
