--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^16.12.0",
     "react-footer-comp": "^3.0.1",
     "react-image-autofit-frame": "^0.1.0",
+    "react-motion": "^0.5.2",
     "react-resize-image": "^1.0.4",
     "react-router-dom": "^5.1.2",
     "react-vk": "^5.0.2",
