--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,14 +2,17 @@
   "extends": ["eslint:recommended", "plugin:react/recommended"],
   "env": {
     "browser": true,
-    "commonjs": true,
     "node": true,
-    "es6": true,
+    "es2020": true,
     "jest": true
   },
   "parser": "babel-eslint",
   "parserOptions": {
-    "ecmaVersion": 2018,
     "sourceType": "module"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
